--- a/app/views/plans/invalid_ref.html.haml
+++ b/app/views/plans/invalid_ref.html.haml
@@ -7,7 +7,7 @@
             = @presenter.version.human
           %span
             =t("ref.choose version")
-  = render_cell :version_selector, :display, {version: @presenter.version, recent_versions: recent_versions, reference: nil, site: @site}
+  = render :partial 'shared/version_selector/display', {version: @presenter.version, recent_versions: recent_versions, reference: nil, site: @site, this_language: @this_language}
 %article
   .wrap
     .align_center= t('plans.invalid reference', support_url: external_url(:support)).html_safe
