Remove signup form from home page (too many required fields now), and logged in user cannot see the sign-up page anymore.

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -167,8 +167,15 @@ p
     p
       display: inline
 
+
+.home-features
+  margin-top: 0 !important
+  margin-bottom: 2em !important
+
+
+
 #main article .explore_cta
-  margin: 40px auto 50px
+  margin: 40px auto 40px
   text-align: center
   overflow: hidden
   width: 980px
@@ -221,55 +228,6 @@ p
       padding: 5px 10px
       border-radius: 4px
       box-shadow: inset 0px -1px 0px rgba(0, 0, 0, 0.3)
-
-#main article .explore_cta.form
-  width: 940px
-  margin: 0 auto
-  overflow: hidden
-
-  ul
-    margin: 0
-
-  li
-    float: left
-    background: transparent
-    width: auto
-    height: 40px
-    margin: 0
-    padding: 0
-
-    input[name="user[email]"], input[name="user[username]"]
-      width: 230px
-      margin-right: 10px
-    input[name="user[password]"]
-      width: 170px
-      margin-right: 10px
-    input[type="submit"]
-      width: 110px
-      margin-left: 10px
-      background: #91B164
-      color: #fff
-      font-weight: bold
-      font-size: 15px
-      text-align: center
-      text-decoration: none
-      padding: 7px 0 8px
-      border-radius: 4px
-      box-shadow: inset 0px -1px 0px rgba(99, 122, 68, 1)
-      text-shadow: none
-      border: 0
-
-  li.terms
-    width: 150px
-    text-align: left
-    font-size: 11px
-    line-height: 1em
-    overflow: hidden
-    span
-      width: 40px
-      float: left
-    span:last-child
-      width: 100px
 
 #main article .bottom_cta
   background-color: #fff
@@ -486,7 +444,7 @@ p
       .explore_cta
         border-radius: 0
         padding: 20px
-        margin-top: 20px
+        margin: 20px auto 20px
         width: auto
         h1, a
           float: none
