--- a/app/views/shared/header/_default.html.haml
+++ b/app/views/shared/header/_default.html.haml
@@ -7,6 +7,7 @@
 
     %a#logo{href: "/", style: "#{@site.logo_style}; background-image: url(#{asset_path(@site.logo_image)})"}
       = @site.title
+    
     - if current_auth
       %a.friend-requests-btn.popover-link{href: "#", class: is_home_url ? 'home-url' : ''}
         =t("friendships.requests title")
@@ -23,7 +24,7 @@
           %li.auth
             %a#header_profile_trigger{:href => '#'}
               %span
-                %img{src: current_avatar}
+                %img{src: current_user.user_avatar_url["px_24x24"]}
                 =current_auth.username
             #header_profile_menu
               %span.arrow
