--- a/app/views/notifications/edit.html.haml
+++ b/app/views/notifications/edit.html.haml
@@ -22,7 +22,7 @@
 
   - # because page can be accessed while logged in or logged out (with token) we use
   - # current_user or fallback to params[:id]
-  = form_tag update_notifications_user_path( current_user || params[:id] ,token: params[:token]), method: :put do |n|
+  = form_tag notifications_path(token: params[:token]), method: :put do |n|
     - unless @settings.errors.blank?
       .form_errors
         =t("users.profile.notification errors")
@@ -33,7 +33,7 @@
     .notification-settings-group
       - settings.each do |type,info|
         .settings-group-item
-          = render partial: "notification_settings_group", locals: {type: type, info: info}
+          = render partial: "settings_group", locals: {type: type, info: info}
 
     %div
       %button{class: "action_button_green", action: "submit"}= t('users.notifications.update')
