--- a/app/views/notifications/edit.html.haml
+++ b/app/views/notifications/edit.html.haml
@@ -10,32 +10,27 @@
   }
 
   @title = t('users.edit notifications')
+  @setting_selected = :notifications
 
-- content_for :title do
-  = t('users.settings')
+%h1
+  = @title
 
-%article
-  = render partial: "users/mobile_menu", locals: {selected: :notifications}
+- # because page can be accessed while logged in or logged out (with token) we use
+- # current_user or fallback to params[:id]
+= form_tag notifications_path(token: params[:token]), method: :put do |n|
+  - unless @settings.errors.blank?
+    .form_errors
+      =t("users.profile.notification errors")
+    %ul
+      - @settings.errors.full_messages.each do |err|
+        %li= err
 
-  %h1
-    = t('users.edit notifications')
+  .notification-settings-group
+    - settings.each do |type,info|
+      .settings-group-item
+        = render partial: "settings_group", locals: {type: type, info: info}
 
-  - # because page can be accessed while logged in or logged out (with token) we use
-  - # current_user or fallback to params[:id]
-  = form_tag notifications_path(token: params[:token]), method: :put do |n|
-    - unless @settings.errors.blank?
-      .form_errors
-        =t("users.profile.notification errors")
-      %ul
-        - @settings.errors.full_messages.each do |err|
-          %li= err
-
-    .notification-settings-group
-      - settings.each do |type,info|
-        .settings-group-item
-          = render partial: "settings_group", locals: {type: type, info: info}
-
-    %div
-      %button{class: "action_button_green", action: "submit"}= t('users.notifications.update')
-    - if params[:token]
-      = hidden_field_tag :token, params[:token]
+  %div
+    %button{class: "action_button_green", action: "submit"}= t('users.notifications.update')
+  - if params[:token]
+    = hidden_field_tag :token, params[:token]
