Bookmark titles now show up appropriately.

--- a/app/views/bookmarks/show.html.haml
+++ b/app/views/bookmarks/show.html.haml
@@ -1,4 +1,4 @@
-- @title = @bookmark.title
+- @title = bookmark_title(@bookmark)
 
 - content_for :sidebar do
   = render partial: "/comments/sidebar_form", locals: {moment: @bookmark}
