--- a/app/views/search/_bible_version_form.html.haml
+++ b/app/views/search/_bible_version_form.html.haml
@@ -1,15 +1,17 @@
+- version_id = search.version_id
+
 %form#version_form{method: 'get'}
-  %input{type: "hidden", name: "q", value: @query.query}
+  %input{type: "hidden", name: "q", value: search.query}
   %input{type: "hidden", name: "category", value: :bible}
   - all_languages = Version.all_by_language
   %select{onChange: "this.form.submit()", name: "version_id"}
     %optgroup{label: Version.languages[I18n.locale.to_s]}
-    %option{value: "", selected: @query.version_id.nil?}
+    %option{value: "", selected: version_id.nil?}
       = t("searching.all versions", language_name: t("language name"))
     - if langs = all_languages[I18n.locale.to_s]
       -  langs.each do |v|
-        %option{value: v.id, selected: v.id == (@query.version_id)}= v
+        %option{value: v.id, selected: v.id == (version_id)}= v
     - all_languages.except(I18n.locale.to_s).each do |lang, versions|
       %optgroup{label: Version.languages[lang]}
       - versions.each do |v|
-        %option{value: v.id, selected: v.id == (@query.version_id)}= v
+        %option{value: v.id, selected: v.id == (version_id)}= v
