--- a/app/views/search/_plans_list_item.html.haml
+++ b/app/views/search/_plans_list_item.html.haml
@@ -1,8 +1,8 @@
-- item = plans_list_item
+- plan = plans_list_item
 %li.plan
   %h3
-    = link_to YV::Resource.i18nize(item.name), plan_path("#{item.id}-#{item.slug}")
+    = link_to plan.name, plan_path(plan)
   %span.length
-    = YV::Resource.i18nize(item.formatted_length)
+    = plan.formatted_length
   %p
-    = YV::Resource.i18nize(item.about)
+    = plan.about
