--- a/app/views/shared/header/_default.html.haml
+++ b/app/views/shared/header/_default.html.haml
@@ -78,11 +78,9 @@
           - else
             = yield :mobile_right_nav
 
-    %form#header_search_form{action: search_path, method: "GET"}
+    %form#header_search_form{action: search_path(category: params[:category] || :bible), method: "GET"}
       %input#header_search_input{type: 'search', name:"q", placeholder: t("search placeholder")}
       %input#header_search_button{type: 'submit', value: t("search")}
       - if params[:controller] == "search"
-        -if params[:category]
-          %input{type: 'hidden', name: "category", value: params[:category]}
         -if params[:version]
           %input{type: 'hidden', name: "version", value: params[:version]}
