--- a/app/views/shared/version_selector/_items.html.haml
+++ b/app/views/shared/version_selector/_items.html.haml
@@ -3,8 +3,8 @@
 -# shared/version_selector/all_versions
 
 -# Local variables
--# presenter
--# versions
+-# presenter  (required)
+-# versions   (required)
 
 - ref_str = presenter.reference_string
 - book, chapter = ref_str.book, ref_str.chapter
