--- a/app/views/references/_js.html.haml
+++ b/app/views/references/_js.html.haml
@@ -1,7 +1,6 @@
 -# js partial shared amongs reader and invalid_ref partials.
 -# Local Parameters
 -# presenter: (required) Presenter::Reference or Presenter::Subscription
--# @this_language (required) Array of versions
 
 - reader_menus  = true
 - version       = presenter.version
@@ -44,7 +43,7 @@
 // Render all necessary menus
 - if reader_menus == true
   = render partial: 'shared/book_selector', locals: {presenter: presenter}
-  = render partial: 'shared/version_selector/display', locals: {presenter: presenter, version: version, recent_versions: recent_versions, reference: reference, site: @site, this_language: @this_language}
+  = render partial: 'shared/version_selector/display', locals: {presenter: presenter, recent_versions: recent_versions}
   - if modal_verse.present?
     = render partial: 'shared/modal_single_verse', locals: {modal_verse: modal_verse, reference: reference, version: version}  unless @verse_modals == false || modal_verse == nil
   = render partial: 'shared/menu_settings'
