--- a/app/views/shared/version_selector/_all_versions.html.haml
+++ b/app/views/shared/version_selector/_all_versions.html.haml
@@ -1,13 +1,11 @@
 -# Used in shared/version_selector/display
 
 -# Local Variables
--# version
--# this_language (passed down to items)
 -# presenter
 
 %tr.cat.cur_language
-  %th{:colspan => '2'}= version.language.human
-= render partial: 'shared/version_selector/items', locals: {presenter: presenter, versions: this_language}
+  %th{:colspan => '2'}= presenter.version.language.human
+= render partial: 'shared/version_selector/items', locals: {presenter: presenter, versions: presenter.versions_for_current_lang}
 -#
   Note: the rest of versions are appended via AJAX when user
   opens the menu, to not clutter the DOM on initial load
