Added a white bg to sidebar widgets

--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -106,6 +106,7 @@
     font-weight: normal
     +border-radius(3px)
     overflow: hidden
+    background-color: #fff
 
     p
       margin: 0
@@ -129,7 +130,6 @@
 
   .ft
     padding: 10px 15px
-    border-top: 1px solid #DEDDDB
 
   .ft.link
     padding: 0
