--- a/app/views/notes/new.html.haml
+++ b/app/views/notes/new.html.haml
@@ -6,4 +6,4 @@
 
 %article
   %h1= t("notes.new note")
-  = render partial: 'form', locals: {note: @note}
+  = render partial: 'form', locals: {note: @moment, results: @results}
